<resources>
    <string name="app_name">RoomDatabase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="data_saved">Data Saved</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="ok">ok</string>
</resources>