<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/etNewDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/etNewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/etNewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_gravity="end"
        android:layout_margin="20dp"
        />
    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_gravity="end"
        android:layout_marginRight="20dp"
        />
</LinearLayout>
</layout>